Resolve issues 93 95 96 98 and 99